--- a/gateway/src/main/resources/bootstrap.yaml
+++ b/gateway/src/main/resources/bootstrap.yaml
@@ -7,7 +7,17 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 127.0.0.1:8848
         file-extension: yaml
+    gateway:
+      routes:
+        - id: user
+          uri: lb://user
+          predicates:
+            - Path=/user/**
+        - id: product
+          uri: lb://product
+          predicates:
+            - Path=/product/**
+
     discovery:
       server-addr: 127.0.0.1:8848
