--- a/product/src/main/resources/bootstrap.yaml
+++ b/product/src/main/resources/bootstrap.yaml
@@ -4,12 +4,14 @@ server:
     context-path: /product
 
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher
   application:
     name: product
   cloud:
     nacos:
       config:
-        server-addr: 127.0.0.1:8848
         file-extension: yaml
     discovery:
       server-addr: 127.0.0.1:8848
